Parse/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.4 from Parse/Parser.y
-----------------------------------------------------------------------------


terminal "<S>" is unused
terminal "</S>" is unused
terminal syntaxOp is unused
terminal syntaxPrec is unused
terminal syntaxAssoc is unused
terminal "<R>" is unused
terminal "</R>" is unused
terminal "(" is unused
terminal ")" is unused
terminal "," is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Document                           (0)
	Document -> Items                                  (1)
	Items -> Items Item                                (2)
	Items -> Item                                      (3)
	Item -> Heading                                    (4)
	Item -> Paragraph                                  (5)
	Heading -> heading                                 (6)
	Paragraph -> paragraph                             (7)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	heading        { Heading $$ }
	paragraph      { Paragraph $$ }
	"<S>"          { SyntaxOpen }
	"</S>"         { SyntaxClose }
	syntaxOp       { SyntaxOperator $$ }
	syntaxPrec     { SyntaxPrecedence $$ }
	syntaxAssoc    { SyntaxAssociativity $$ }
	"<R>"          { RuleOpen }
	"</R>"         { RuleClose }
	"("            { ParenOpen }
	")"            { ParenClose }
	","            { Comma }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Document        rule  1
	Items           rules 2, 3
	Item            rules 4, 5
	Heading         rule  6
	Paragraph       rule  7

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Document                          (rule 0)

	heading        shift, and enter state 6
	paragraph      shift, and enter state 7

	Document       goto state 8
	Items          goto state 2
	Item           goto state 3
	Heading        goto state 4
	Paragraph      goto state 5

State 1

	Document -> . Items                                 (rule 1)

	heading        shift, and enter state 6
	paragraph      shift, and enter state 7

	Items          goto state 2
	Item           goto state 3
	Heading        goto state 4
	Paragraph      goto state 5

State 2

	Document -> Items .                                 (rule 1)
	Items -> Items . Item                               (rule 2)

	heading        shift, and enter state 6
	paragraph      shift, and enter state 7
	%eof           reduce using rule 1

	Item           goto state 9
	Heading        goto state 4
	Paragraph      goto state 5

State 3

	Items -> Item .                                     (rule 3)

	heading        reduce using rule 3
	paragraph      reduce using rule 3
	%eof           reduce using rule 3


State 4

	Item -> Heading .                                   (rule 4)

	heading        reduce using rule 4
	paragraph      reduce using rule 4
	%eof           reduce using rule 4


State 5

	Item -> Paragraph .                                 (rule 5)

	heading        reduce using rule 5
	paragraph      reduce using rule 5
	%eof           reduce using rule 5


State 6

	Heading -> heading .                                (rule 6)

	heading        reduce using rule 6
	paragraph      reduce using rule 6
	%eof           reduce using rule 6


State 7

	Paragraph -> paragraph .                            (rule 7)

	heading        reduce using rule 7
	paragraph      reduce using rule 7
	%eof           reduce using rule 7


State 8

	%start_parse -> Document .                          (rule 0)

	%eof           accept


State 9

	Items -> Items Item .                               (rule 2)

	heading        reduce using rule 2
	paragraph      reduce using rule 2
	%eof           reduce using rule 2


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 8
Number of terminals: 12
Number of non-terminals: 6
Number of states: 10
